# educore

./: .gitignore  BUILD_INSTALLER.ps1  DEPLOYMENT_GUIDE.md  PRIVATE_REPO_SETUP.md  SETUP_UPDATER.md  UPDATE_SYSTEM_SUMMARY.md  can she sit on my face  upload_release.ps1  version.json
.github/workflows/: release.yml
DAS Backend/: FIX_DATABASE_ENCRYPTION.ps1  FIX_PAYMENT_STATUS.md  check_correct_average.py  check_grades.py  cleanup_orphaned_teacher_slots.py  migration_update_payment_status.sql  run_payment_migration.py  test_new_calculation.py
DAS Backend/backend/: build_backend.ps1  das_backend.spec  requirements.txt  run_server.py
DAS Backend/backend/app/: config.py  database.py  main.py
DAS Backend/backend/migrations/: add_before_after_constraint_columns.sql
DAS Frontend/: index.html  package-lock.json  package.json  updater-keys.key.pub  webpack.config.cjs
DAS Frontend/src/: App.tsx  index.css
DAS Frontend/src-tauri/: BUILD_TROUBLESHOOTING.md  Cargo.toml  fix-build-permissions.ps1  tauri.conf.json
DAS Frontend/src-tauri/capabilities/: process.json  shell.json  updater.json
DAS Frontend/src-tauri/icons/: icon.icns
DAS Frontend/src-tauri/src/: main.rs
DAS Frontend/src/components/: SplashScreen.tsx  UpdateChecker.tsx  UserProfileModal.tsx
DAS Frontend/src/contexts/: AuthContext.tsx  ZoomContext.tsx
DAS Frontend/src/lib/: markdownUtils.ts  scheduleCache.ts  utils.ts
DAS Frontend/src/pages/: ActivitiesManagementPage.tsx  DailyPage.tsx  DashboardPage.tsx  DirectorNotesPage.tsx  DirectorNotesSearchPage.tsx  LoginPage.tsx  ScheduleManagementPage.tsx  SchoolInfoManagementPage.tsx  SettingsPage.tsx  StudentAcademicInfoPage.tsx  StudentPersonalInfoPage.tsx  TeacherManagementPage.tsx  UpdateTestPage.tsx  index.ts
DAS Frontend/src/services/: api.ts
DAS Frontend/src/types/: school.ts  (+1 more)
(+78 files in other folders)
