[package]
name = "educore"
version = "1.0.0"
description = "Professional School Management System - DAS Management"
authors = ["DAS Management Team"]
license = "MIT"
repository = ""
default-run = "educore"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
# Use default-features = false to reduce size by only including what we need
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

# Tauri with minimal features for production
tauri = { version = "2", default-features = false, features = [
  "tray-icon",
  "image-png"
] }

# Tauri plugins with minimal features
tauri-plugin-shell = { version = "2", default-features = false }
tauri-plugin-fs = { version = "2", default-features = false }
tauri-plugin-window-state = { version = "2", default-features = false }
tauri-plugin-decorum = { version = "0.1", default-features = false }
tauri-plugin-updater = { version = "2", default-features = false }


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Production release profile optimizations
[profile.release]
opt-level = "z"          # Optimize for size (smallest binary)
lto = true               # Link-time optimization (slower build, smaller size)
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip symbols from binary
panic = "abort"          # Smaller panic handler
overflow-checks = false  # Disable overflow checks in release

# Further size optimization
[profile.release.package."*"]
opt-level = "z"
strip = true
